edit download button :p

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ header{
 
 <p class="download-info">
       <a href="https://github.com/takien/tTooltip" class="btn btn-primary btn-large" >View project on GitHub</a>
-      <a href="https://github.com/takien/tTooltip/zipball/master" class="btn btn-large">Download tTooltip <small>(v0.1)</small></a>
+      <a href="https://github.com/takien/tTooltip/zipball/master" class="btn btn-large btn-success">Download tTooltip <small>(v0.1)</small></a>
     </p>
 
 <h2>Features:</h2>
