--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ header{
         <a href="https://twitter.com/cektkp" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @cektkp</a>
       </li>
       <li class="tweet-btn">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://takien.github.com/tTooltip/" data-count="horizontal" data-via="cektkp" data-related="mdo:Creator of tTooltip">Tweet</a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://takien.github.com/tTooltip/" data-count="horizontal" data-via="cektkp" data-related="cektkp:Creator of tTooltip">Tweet</a>
       </li>
     </ul>
 <h2>Features:</h2>
