--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <meta property="og:site_name" content="jQuery tTooltip"/>
-<meta property="fb:admins" content="1171193314"/>
-<meta property="fb:app_id" content="394280927787"/>
 <meta property="og:title" content="jQuery tTooltip"/>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://takien.github.com/tTooltip/"/>
+<meta property="og:url" content="http://takien.github.com/tTooltip" />
 <meta property="og:image" content="http://takien.github.com/tTooltip/images/tooltip-sample.jpg" />
 <meta property="og:description" content="jQuery tTooltip is just another simple and lightweight tooltip plugin for jQuery."/>
 <meta name="description" content="jQuery tTooltip is just another simple and lightweight tooltip plugin for jQuery. " />
