--- a/index.html
+++ b/index.html
@@ -594,7 +594,12 @@ jQuery(document).ready(function($){
 	<tr><td><strong>title		</strong></td><td> : <em>'',</em></td><td>Set default title, not implemented in this version.</td></tr>
 	<tr><td><strong>trigger		</strong></td><td> : <em>'mouseenter',</em></td><td>When tooltip should be triggered. Possible value: <code>mouseenter, hover, mouse, click, dblclick</code></td></tr>
 	<tr><td><strong>close		</strong></td><td> : <em>'mouseleave',</em></td><td>Set <code>mouseleave</code> if you want to tooltip autohide (autohide parameter should be true). Otherwise you can set <code>click</code> if you want tooltip to close when it's clicked.</td></tr>
-	<tr><td><strong>maxwidth	</strong></td><td> : <em>500,</em></td><td>Maximum width of the tooltip box, default value is <code>500</code></td></tr>
+	<tr><td><strong>maxwidth	</strong></td><td> : <em>500</em></td><td>Maximum width of the tooltip box, default value is <code>500</code></td></tr>
+	
+	<tr><td><strong><tr><td><strong>fadeoutspeed</strong></td><td> : <em>'slow'</em></td><td>The fadeout speed, default is <code>slow</code>. Possible value: <code>slow, fast</code> and any number (miliseconds) eg <code>1000</code>.</td></tr>	
+	
+
+	
 	<tr><td><strong>template	</strong></td><td> : <pre >&lt;div class=&quot;ttooltip-wrap&quot;&gt;&lt;div class=&quot;ttooltip-arrow ttooltip-arrow-border&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-arrow&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-inner&quot;&gt;&lt;h3 class=&quot;ttooltip-title&quot;&gt;&lt;/h3&gt;&lt;div class=&quot;ttooltip-content&quot;&gt;&lt;p&gt;&lt;/p&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-footer&quot;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</pre></td><td>
 	You can modify the template of the tooltip here. But note that, do not modify or remove these class name: <code>ttooltip-wrap, ttooltip-arrow, ttooltip-arrow-border, ttooltip-inner, ttooltip-title, ttooltip-content, ttooltip-footer</code> or you may break the tooltip.
 	</td></tr>
