--- a/example.html
+++ b/example.html
@@ -596,7 +596,7 @@ jQuery(document).ready(function($){
 	<tr><td><strong>close		</strong></td><td> : <em>'mouseleave',</em></td><td>Set <code>mouseleave</code> if you want to tooltip autohide (autohide parameter should be true). Otherwise you can set <code>click</code> if you want tooltip to close when it's clicked.</td></tr>
 	<tr><td><strong>maxwidth	</strong></td><td> : <em>500</em></td><td>Maximum width of the tooltip box, default value is <code>500</code></td></tr>
 	
-	<tr><td><strong><tr><td><strong>fadeoutspeed</strong></td><td> : <em>'slow'</em></td><td>The fadeout speed, default is <code>slow</code>. Possible value: <code>slow, fast</code> and any number (miliseconds) eg <code>1000</code>.</td></tr>	
+	<tr><td><strong>fadeoutspeed</strong></td><td> : <em>'slow'</em></td><td>The fadeout speed, default is <code>slow</code>. Possible value: <code>slow, fast</code> and any number (miliseconds) eg <code>1000</code>.</td></tr>	
 	
 
 	
