Added: timeout parameter Fixed: arrow color when footer is not empty

--- a/example.html
+++ b/example.html
@@ -598,6 +598,7 @@ jQuery(document).ready(function($){
 	
 	<tr><td><strong>fadeoutspeed</strong></td><td> : <em>'slow'</em></td><td>The fadeout speed, default is <code>slow</code>. Possible value: <code>slow, fast</code> and any number (miliseconds) eg <code>1000</code>.</td></tr>	
 	
+	<tr><td><strong>timeout</strong></td><td> : <em>2000</em></td><td>Miliseconds before tooltip auto closed. Default value <code>2000</code>.</td></tr>
 
 	
 	<tr><td><strong>template	</strong></td><td> : <pre >&lt;div class=&quot;ttooltip-wrap&quot;&gt;&lt;div class=&quot;ttooltip-arrow ttooltip-arrow-border&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-arrow&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-inner&quot;&gt;&lt;h3 class=&quot;ttooltip-title&quot;&gt;&lt;/h3&gt;&lt;div class=&quot;ttooltip-content&quot;&gt;&lt;p&gt;&lt;/p&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-footer&quot;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</pre></td><td>
@@ -641,6 +642,20 @@ Ipsa codicellos iam gubergren nonumy qui a a civitas Conservus mihi quidditas mi
 }(document, 'script', 'facebook-jssdk'));</script>
 </body>
 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-32528012-1']);
+  _gaq.push(['_setDomainName', 'github.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 <!-- Place this render call where appropriate -->
