remove iframe on docs.

--- a/example.html
+++ b/example.html
@@ -26,11 +26,15 @@ jQuery(document).ready(function($){
 		followmouse: true,
 		onload   : function(tooltip,source){
 			tooltip.click(function(){
-				console.log('tooltip clicked');
+				//console.log('tooltip clicked');
+				if(source.is('input')){
+				source.val(tooltip.text());
+				}
 			});
 		},
 		onclose : function(tooltip,source){
-			console.log('tooltip closed');
+			//console.log('tooltip closed');
+			
 		}
 	});
 	
@@ -450,12 +454,7 @@ header{
 	<li class="fb-btn">
 	<fb:like layout="button_count" send="false" href="http://takien.github.com/tTooltip/"></fb:like>
 	</li>
-      <li>
-        <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=takien&repo=tTooltip&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
-      </li>
-      <li>
-        <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=takien&repo=tTooltip&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
-      </li>
+      
       <li class="follow-btn">
         <a href="https://twitter.com/cektkp" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @cektkp</a>
       </li>
