update version in docs,update style/jquery-ttooltip.css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ jQuery(document).ready(function($){
 		onload   : function(tooltip,source){
 			tooltip.click(function(){
 				//console.log('tooltip clicked');
-				if(source.is('input')){
+				/*if(source.is('input')){
 				source.val(tooltip.text());
-				}
+				}*/
 			});
 		},
 		onclose : function(tooltip,source){
@@ -47,7 +47,7 @@ jQuery(document).ready(function($){
 <div class="container" id="wrapper">
 <header>
 <h1>jQuery tTooltip plugin</h1>
-<p><em>&copy; 2012 by <a href="http://takien.com" target="_blank">takien</a></em></p>
+<p><em>&copy; 2013 by <a href="http://takien.com" target="_blank">takien</a></em></p>
 <p><strong>jQuery tTooltip</strong> is just another simple and lightweight tooltip plugin for jQuery.
 </p>
 </header>
@@ -55,7 +55,7 @@ jQuery(document).ready(function($){
 
 <p class="download-info">
       <a href="https://github.com/takien/tTooltip" class="btn btn-primary btn-large" >View project on GitHub</a>
-      <a href="https://github.com/takien/tTooltip/zipball/master" class="btn btn-large btn-success">Download tTooltip (v0.1)</a>
+      <a href="https://github.com/takien/tTooltip/zipball/master" class="btn btn-large btn-success">Download tTooltip (v0.2)</a>
     </p>
   <ul class="quick-links">
 	<li class="fb-btn">
@@ -300,7 +300,7 @@ Ipsa codicellos iam gubergren nonumy qui a a civitas Conservus mihi quidditas mi
 <footer class="well">
 	<div class="container">
 	<div class="row">
-		<div class="span6"><p>Copyright &copy; 2012 - <a href="http://takien.com" target="_blank">takien.com</a></div>
+		<div class="span6"><p>Copyright &copy; 2013 - <a href="http://takien.com" target="_blank">takien.com</a></div>
 		<div class="span6">
 		<p>This demo use <a href="#">Twitter Bootstrap</a> for styling, but you can use tTooltip is without Twitter Bootstrap</p>
 		</div>
