update template to docs

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ jQuery(document).ready(function($){
 	<tr><td><strong>timeout</strong></td><td> : <em>2000</em></td><td>Miliseconds before tooltip auto closed. Default value <code>2000</code>.</td></tr>
 
 	
-	<tr><td><strong>template	</strong></td><td> : <pre >&lt;div class=&quot;ttooltip-wrap&quot;&gt;&lt;div class=&quot;ttooltip-arrow ttooltip-arrow-border&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-arrow&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-inner&quot;&gt;&lt;h3 class=&quot;ttooltip-title&quot;&gt;&lt;/h3&gt;&lt;div class=&quot;ttooltip-content&quot;&gt;&lt;p&gt;&lt;/p&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-footer&quot;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</pre></td><td>
+	<tr><td><strong>template	</strong></td><td> : <pre >&lt;div class=&quot;ttooltip-wrap&quot;&gt;&lt;div class=&quot;ttooltip-arrow ttooltip-arrow-border&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-arrow&quot;&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-inner&quot;&gt;&lt;button type=&quot;button&quot; class=&quot;ttooltip-close&quot;&gt;&amp;times;&lt;/button&gt;&lt;h3 class=&quot;ttooltip-title&quot;&gt;&lt;/h3&gt;&lt;div class=&quot;ttooltip-content&quot;&gt;&lt;p&gt;&lt;/p&gt;&lt;/div&gt;&lt;div class=&quot;ttooltip-footer&quot;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</pre></td><td>
 	You can modify the template of the tooltip here. But note that, do not modify or remove these class name: <code>ttooltip-wrap, ttooltip-arrow, ttooltip-arrow-border, ttooltip-inner, ttooltip-title, ttooltip-content, ttooltip-footer</code> or you may break the tooltip.
 	</td></tr>
 	</tbody>
